# whisper_streaming_ivrit

./: README.md  latency_script.py  out.txt  out1.txt  out10.txt  out11.txt  out12.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  out7.txt  out9.txt  pyproject.toml  voice_activity_controller.py  whisper_online.py
